<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fi.metropolia.daniel_vahla.lab4.Calculator">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/background"
        >
        <TextView
            android:id="@+id/Result"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="right|center_vertical"
            android:textColor="#FF0040"
            android:textSize="18dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/b1x1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/s1x1"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/b1x2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s1x2"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/b1x3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/s1x3"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/b1x4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s1x4"
            android:layout_margin="5dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <Button
            android:id="@+id/b2x1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/s2x1"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/b2x2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s2x2"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/b2x3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/s2x3"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/b2x4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s2x4"
            android:layout_margin="5dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <Button
            android:id="@+id/b3x1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/s3x1"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/b3x2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s3x2"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/b3x3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/s3x3"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/b3x4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s3x4"
            android:layout_margin="5dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <Button
            android:id="@+id/b4x1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/s4x1"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/b4x2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s4x2"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/b4x3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/s4x3"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/b4x4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s4x4"
            android:layout_margin="5dp"
            />

    </LinearLayout>

</LinearLayout>
